# fierce_c

./: CMakeLists.txt  README.md
dict/: 5000.txt  5000.txt.c
dns/: config.c  config.h  dns_request.c  dns_request.h  main.c  threads.c  threads.h
fierce_c/: config.c  config.h  dns_request.c  dns_request.h  main.c  threads.c  threads.h
